--- a/docs/usage/man/wice-stop.3
+++ b/docs/usage/man/wice-stop.3
@@ -3,28 +3,32 @@
 
 .SH NAME
 .PP
-wice - WICE
+wice-stop - Shutdown the WICE daemon
 
 
 .SH SYNOPSIS
 .PP
-\fBwice [flags]\fP
+\fBwice stop [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Wireguard Interactive Connectitivty Establishment
+Shutdown the WICE daemon
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for wice
+	help for stop
+
+.PP
+\fB-s\fP, \fB--socket\fP="/var/run/wice.sock"
+	Unix control and monitoring socket
 
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-docs(3)\fP, \fBwice-monitor(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP
+\fBwice(3)\fP
 
 
 .SH HISTORY
