--- a/docs/usage/man/wice-daemon.3
+++ b/docs/usage/man/wice-daemon.3
@@ -131,7 +131,7 @@ Start the daemon
 
 .PP
 \fB-S\fP, \fB--wg-config-sync\fP[=false]
-	sync Wireguard interface with configuration file (see "wg synconf"
+	sync Wireguard interface with configuration file (see "wg synconf")
 
 .PP
 \fB-u\fP, \fB--wg-user\fP[=false]
