--- a/docs/usage/man/wice-wg-genpsk.3
+++ b/docs/usage/man/wice-wg-genpsk.3
@@ -3,28 +3,28 @@
 
 .SH NAME
 .PP
-wice - WICE
+wice-wg-genpsk - Generates a new preshared key and writes it to stdout
 
 
 .SH SYNOPSIS
 .PP
-\fBwice [flags]\fP
+\fBwice wg genpsk [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Wireguard Interactive Connectitivty Establishment
+Generates a new preshared key and writes it to stdout
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for wice
+	help for genpsk
 
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-docs(3)\fP, \fBwice-monitor(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
+\fBwice-wg(3)\fP
 
 
 .SH HISTORY
