--- a/docs/usage/man/wice-wg.3
+++ b/docs/usage/man/wice-wg.3
@@ -3,28 +3,28 @@
 
 .SH NAME
 .PP
-wice - WICE
+wice-wg - Wireguard commands
 
 
 .SH SYNOPSIS
 .PP
-\fBwice [flags]\fP
+\fBwice wg [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Wireguard Interactive Connectitivty Establishment
+Wireguard commands
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for wice
+	help for wg
 
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-docs(3)\fP, \fBwice-monitor(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
+\fBwice(3)\fP, \fBwice-wg-genkey(3)\fP, \fBwice-wg-genpsk(3)\fP, \fBwice-wg-pubkey(3)\fP
 
 
 .SH HISTORY
