add --log-file command line argument
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/wice-completion-bash.3
+++ b/docs/usage/man/wice-completion-bash.3
@@ -70,6 +70,10 @@ You will need to start a new shell for this setup to take effect.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
+\fB-l\fP, \fB--log-file\fP=""
+	path of a file to write logs to
+
+.PP
 \fB-d\fP, \fB--log-level\fP="info"
 	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
 
