--- a/docs/usage/man/wice-completion.3
+++ b/docs/usage/man/wice-completion.3
@@ -25,6 +25,10 @@ See each sub-command's help for details on how to use the generated script.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
+\fB-l\fP, \fB--log-file\fP=""
+	path of a file to write logs to
+
+.PP
 \fB-d\fP, \fB--log-level\fP="info"
 	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
 
