--- a/docs/usage/man/wice-signal.3
+++ b/docs/usage/man/wice-signal.3
@@ -22,11 +22,15 @@ Start gRPC signaling server
 	help for signal
 
 .PP
-\fB-l\fP, \fB--listen\fP=":443"
+\fB-L\fP, \fB--listen\fP=":443"
 	listen address
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+.PP
+\fB-l\fP, \fB--log-file\fP=""
+	path of a file to write logs to
+
 .PP
 \fB-d\fP, \fB--log-level\fP="info"
 	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
