--- a/docs/usage/man/wice-sync.3
+++ b/docs/usage/man/wice-sync.3
@@ -28,6 +28,10 @@ Synchronizes the internal daemon state with the state of the Wireguard interface
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
+\fB-l\fP, \fB--log-file\fP=""
+	path of a file to write logs to
+
+.PP
 \fB-d\fP, \fB--log-level\fP="info"
 	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
 
