--- a/docs/usage/man/wice.3
+++ b/docs/usage/man/wice.3
@@ -22,10 +22,14 @@ Wireguard Interactive Connectitivty Establishment
 	help for wice
 
 .PP
+\fB-l\fP, \fB--log-file\fP=""
+	path of a file to write logs to
+
+.PP
 \fB-d\fP, \fB--log-level\fP="info"
 	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
 
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-signal(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
+\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-interface(3)\fP, \fBwice-monitor(3)\fP, \fBwice-peer(3)\fP, \fBwice-signal(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
