--- a/docs/usage/man/wice-wg-pubkey.3
+++ b/docs/usage/man/wice-wg-pubkey.3
@@ -24,6 +24,10 @@ Reads a private key from stdin and writes a public key to stdout
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
+\fB-l\fP, \fB--log-file\fP=""
+	path of a file to write logs to
+
+.PP
 \fB-d\fP, \fB--log-level\fP="info"
 	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
 
