update generated docs
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/wice.3
+++ b/docs/usage/man/wice.3
@@ -32,4 +32,4 @@ Wireguard Interactive Connectitivty Establishment
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-interface(3)\fP, \fBwice-monitor(3)\fP, \fBwice-peer(3)\fP, \fBwice-signal(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
+\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-signal(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
