--- a/docs/usage/man/wice-stop.3
+++ b/docs/usage/man/wice-stop.3
@@ -1,9 +1,9 @@
 .nh
-.TH "WICE" "3" "Feb 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-stop - Shutdown the WICE daemon
+wice-stop - Shutdown the ɯice daemon
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-stop - Shutdown the WICE daemon
 
 .SH DESCRIPTION
 .PP
-Shutdown the WICE daemon
+Shutdown the ɯice daemon
 
 
 .SH OPTIONS
