--- a/docs/usage/man/wice.3
+++ b/docs/usage/man/wice.3
@@ -1,9 +1,9 @@
 .nh
-.TH "WICE" "3" "Feb 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice - WICE
+wice - ɯice
 
 
 .SH SYNOPSIS
@@ -32,4 +32,4 @@ Wireguard Interactive Connectitivty Establishment
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-signal(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
+\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-self-update(3)\fP, \fBwice-signal(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
