--- a/docs/usage/man/wice-completion-powershell.3
+++ b/docs/usage/man/wice-completion-powershell.3
@@ -1,5 +1,5 @@
 .nh
-.TH "WICE" "3" "Feb 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
