fix typo in command usage
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/wice.3
+++ b/docs/usage/man/wice.3
@@ -13,7 +13,7 @@ wice - ɯice
 
 .SH DESCRIPTION
 .PP
-Wireguard Interactive Connectitivty Establishment
+Wireguard Interactive Connectivity Establishment
 
 
 .SH OPTIONS
