--- a/docs/usage/man/wice-signal.3
+++ b/docs/usage/man/wice-signal.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -22,8 +22,12 @@ Start gRPC signaling server
 	help for signal
 
 .PP
-\fB-L\fP, \fB--listen\fP=":443"
+\fB-L\fP, \fB--listen\fP=":8080"
 	listen address
+
+.PP
+\fB-S\fP, \fB--secure\fP[=false]
+	listen with TLS
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
@@ -33,7 +37,7 @@ Start gRPC signaling server
 
 .PP
 \fB-d\fP, \fB--log-level\fP="info"
-	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
+	log level (one of: debug, info, warn, error, dpanic, panic, and fatal)
 
 
 .SH SEE ALSO
