--- a/docs/usage/man/wice-stop.3
+++ b/docs/usage/man/wice-stop.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -22,7 +22,7 @@ Shutdown the ɯice daemon
 	help for stop
 
 .PP
-\fB-s\fP, \fB--socket\fP="/var/run/wice.sock"
+\fB-s\fP, \fB--rpc-socket\fP="/var/run/wice.sock"
 	Unix control and monitoring socket
 
 
@@ -33,7 +33,7 @@ Shutdown the ɯice daemon
 
 .PP
 \fB-d\fP, \fB--log-level\fP="info"
-	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
+	log level (one of: debug, info, warn, error, dpanic, panic, and fatal)
 
 
 .SH SEE ALSO
