--- a/docs/usage/man/wice-wg-genpsk.3
+++ b/docs/usage/man/wice-wg-genpsk.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -29,7 +29,7 @@ Generates a new preshared key and writes it to stdout
 
 .PP
 \fB-d\fP, \fB--log-level\fP="info"
-	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
+	log level (one of: debug, info, warn, error, dpanic, panic, and fatal)
 
 
 .SH SEE ALSO
