--- a/docs/usage/man/wice-wg.3
+++ b/docs/usage/man/wice-wg.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-wg - Wireguard commands
+wice-wg - WireGuard commands
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-wg - Wireguard commands
 
 .SH DESCRIPTION
 .PP
-Wireguard commands
+WireGuard commands
 
 
 .SH OPTIONS
@@ -29,7 +29,7 @@ Wireguard commands
 
 .PP
 \fB-d\fP, \fB--log-level\fP="info"
-	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
+	log level (one of: debug, info, warn, error, dpanic, panic, and fatal)
 
 
 .SH SEE ALSO
