--- a/docs/usage/man/wice.3
+++ b/docs/usage/man/wice.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "May 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -13,23 +13,23 @@ wice - ɯice
 
 .SH DESCRIPTION
 .PP
-Wireguard Interactive Connectivity Establishment
+WireGuard Interactive Connectivity Establishment
 
 
 .SH OPTIONS
-.PP
-\fB-h\fP, \fB--help\fP[=false]
-	help for wice
-
 .PP
 \fB-l\fP, \fB--log-file\fP=""
 	path of a file to write logs to
 
 .PP
 \fB-d\fP, \fB--log-level\fP="info"
-	log level (one of "debug", "info", "warn", "error", "dpanic", "panic", and "fatal")
+	log level (one of: debug, info, warn, error, dpanic, panic, and fatal)
+
+.PP
+\fB-h\fP, \fB--help\fP[=false]
+	help for wice
 
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-self-update(3)\fP, \fBwice-signal(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
+\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-self-update(3)\fP, \fBwice-signal(3)\fP, \fBwice-status(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
