cmd: remove many of the advanced configuration options from the CLI to the config file
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/wice-completion-bash.3
+++ b/docs/usage/man/wice-completion-bash.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -69,6 +69,10 @@ You will need to start a new shell for this setup to take effect.
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+.PP
+\fB-C\fP, \fB--color\fP="auto"
+	Enable colorization of output (one of: auto, always, never)
+
 .PP
 \fB-l\fP, \fB--log-file\fP=""
 	path of a file to write logs to
