--- a/docs/usage/man/wice-self-update.3
+++ b/docs/usage/man/wice-self-update.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -25,11 +25,15 @@ files.
 	help for self-update
 
 .PP
-\fB-o\fP, \fB--output\fP="/tmp/go-build4231818187/b001/exe/wice"
+\fB-o\fP, \fB--output\fP="/tmp/go-build3033162298/b001/exe/wice"
 	Save the downloaded file as \fB\fCfilename\fR
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+.PP
+\fB-C\fP, \fB--color\fP="auto"
+	Enable colorization of output (one of: auto, always, never)
+
 .PP
 \fB-l\fP, \fB--log-file\fP=""
 	path of a file to write logs to
