--- a/docs/usage/man/wice-wg-pubkey.3
+++ b/docs/usage/man/wice-wg-pubkey.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-wg-pubkey - Reads a private key from stdin and writes a public key to stdout
+wice-wg-pubkey - Calculates a public key and prints it in base64 to standard output.
 
 
 .SH SYNOPSIS
@@ -13,7 +13,12 @@ wice-wg-pubkey - Reads a private key from stdin and writes a public key to stdou
 
 .SH DESCRIPTION
 .PP
-Reads a private key from stdin and writes a public key to stdout
+Calculates a public key and prints it in base64 to standard output from a corresponding private key (generated with genkey) given in base64 on standard input.
+
+.PP
+A private key and a corresponding public key may be generated at once by calling:
+$ umask 077
+$ wg genkey | tee private.key | wg pubkey > public.key
 
 
 .SH OPTIONS
@@ -23,6 +28,10 @@ Reads a private key from stdin and writes a public key to stdout
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+.PP
+\fB-C\fP, \fB--color\fP="auto"
+	Enable colorization of output (one of: auto, always, never)
+
 .PP
 \fB-l\fP, \fB--log-file\fP=""
 	path of a file to write logs to
