--- a/docs/usage/man/wice.3
+++ b/docs/usage/man/wice.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -18,6 +18,10 @@ WireGuard Interactive Connectivity Establishment
 
 .SH OPTIONS
 .PP
+\fB-C\fP, \fB--color\fP="auto"
+	Enable colorization of output (one of: auto, always, never)
+
+.PP
 \fB-l\fP, \fB--log-file\fP=""
 	path of a file to write logs to
 
@@ -32,4 +36,4 @@ WireGuard Interactive Connectivity Establishment
 
 .SH SEE ALSO
 .PP
-\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-self-update(3)\fP, \fBwice-signal(3)\fP, \fBwice-status(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-wg(3)\fP
+\fBwice-completion(3)\fP, \fBwice-daemon(3)\fP, \fBwice-monitor(3)\fP, \fBwice-restart(3)\fP, \fBwice-self-update(3)\fP, \fBwice-signal(3)\fP, \fBwice-status(3)\fP, \fBwice-stop(3)\fP, \fBwice-sync(3)\fP, \fBwice-version(3)\fP, \fBwice-wg(3)\fP
