--- a/docs/usage/man/wice-wg-genkey.3
+++ b/docs/usage/man/wice-wg-genkey.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-wg-genkey - Generates a new private key and writes it to stdout
+wice-wg-genkey - Generates a random private key in base64 and prints it to standard output.
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-wg-genkey - Generates a new private key and writes it to stdout
 
 .SH DESCRIPTION
 .PP
-Generates a new private key and writes it to stdout
+Generates a random private key in base64 and prints it to standard output.
 
 
 .SH OPTIONS
@@ -23,6 +23,10 @@ Generates a new private key and writes it to stdout
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
+.PP
+\fB-C\fP, \fB--color\fP="auto"
+	Enable colorization of output (one of: auto, always, never)
+
 .PP
 \fB-l\fP, \fB--log-file\fP=""
 	path of a file to write logs to
