--- a/docs/usage/man/wice-wg.3
+++ b/docs/usage/man/wice-wg.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "Aug 2022" "https://github.com/stv0g/wice" ""
+.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -24,6 +24,10 @@ WireGuard commands
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
+\fB-C\fP, \fB--color\fP="auto"
+	Enable colorization of output (one of: auto, always, never)
+
+.PP
 \fB-l\fP, \fB--log-file\fP=""
 	path of a file to write logs to
 
@@ -34,4 +38,4 @@ WireGuard commands
 
 .SH SEE ALSO
 .PP
-\fBwice(3)\fP, \fBwice-wg-genkey(3)\fP, \fBwice-wg-genpsk(3)\fP, \fBwice-wg-pubkey(3)\fP, \fBwice-wg-show(3)\fP
+\fBwice(3)\fP, \fBwice-wg-genkey(3)\fP, \fBwice-wg-genpsk(3)\fP, \fBwice-wg-pubkey(3)\fP, \fBwice-wg-show(3)\fP, \fBwice-wg-showconf(3)\fP
