first batch of project name changes
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/wice-completion-bash.3
+++ b/docs/usage/man/wice-completion-bash.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
