--- a/docs/usage/man/wice-daemon.3
+++ b/docs/usage/man/wice-daemon.3
@@ -1,5 +1,5 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
@@ -83,7 +83,7 @@ Start the daemon
 
 .PP
 \fB-s\fP, \fB--rpc-socket\fP=""
-	The \fB\fCpath\fR of the unix socket used by other ɯice commands
+	The \fB\fCpath\fR of the unix socket used by other cunicu commands
 
 .PP
 \fB--rpc-wait\fP[=false]
