--- a/docs/usage/man/wice-monitor.3
+++ b/docs/usage/man/wice-monitor.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-monitor - Monitor the ɯice daemon for events
+wice-monitor - Monitor the cunicu daemon for events
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-monitor - Monitor the ɯice daemon for events
 
 .SH DESCRIPTION
 .PP
-Monitor the ɯice daemon for events
+Monitor the cunicu daemon for events
 
 
 .SH OPTIONS
