--- a/docs/usage/man/wice-restart.3
+++ b/docs/usage/man/wice-restart.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-restart - Restart the ɯice daemon
+wice-restart - Restart the cunicu daemon
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-restart - Restart the ɯice daemon
 
 .SH DESCRIPTION
 .PP
-Restart the ɯice daemon
+Restart the cunicu daemon
 
 
 .SH OPTIONS
