--- a/docs/usage/man/wice-stop.3
+++ b/docs/usage/man/wice-stop.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-stop - Shutdown the ɯice daemon
+wice-stop - Shutdown the cunicu daemon
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-stop - Shutdown the ɯice daemon
 
 .SH DESCRIPTION
 .PP
-Shutdown the ɯice daemon
+Shutdown the cunicu daemon
 
 
 .SH OPTIONS
