--- a/docs/usage/man/wice-version.3
+++ b/docs/usage/man/wice-version.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-version - Show current status of the ɯice daemon, its interfaces and peers
+wice-version - Show current status of the cunicu daemon, its interfaces and peers
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-version - Show current status of the ɯice daemon, its interfaces and peers
 
 .SH DESCRIPTION
 .PP
-Show current status of the ɯice daemon, its interfaces and peers
+Show current status of the cunicu daemon, its interfaces and peers
 
 
 .SH OPTIONS
