--- a/docs/usage/man/wice-self-update.3
+++ b/docs/usage/man/wice-self-update.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice-self-update - Update the ɯice binary
+wice-self-update - Update the cunicu binary
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ wice-self-update - Update the ɯice binary
 
 .SH DESCRIPTION
 .PP
-The command "self-update" downloads the latest stable release of ɯice from
+The command "self-update" downloads the latest stable release of cunicu from
 GitHub and replaces the currently running binary. After download, the
 authenticity of the binary is verified using the GPG signature on the release
 files.
