--- a/docs/usage/man/wice.3
+++ b/docs/usage/man/wice.3
@@ -1,9 +1,9 @@
 .nh
-.TH "ɯice" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
+.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/wice" ""
 
 .SH NAME
 .PP
-wice - ɯice
+wice - cunicu
 
 
 .SH SYNOPSIS
