docs: update autogenerated docs
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/cunicu-self-update.3
+++ b/docs/usage/man/cunicu-self-update.3
@@ -25,7 +25,7 @@ files.
 	help for self-update
 
 .PP
-\fB-o\fP, \fB--output\fP="/tmp/go-build2225837634/b001/exe/cunicu"
+\fB-o\fP, \fB--output\fP="cunicu"
 	Save the downloaded file as \fB\fCfilename\fR
 
 
