--- a/docs/usage/man/cunicu-version.3
+++ b/docs/usage/man/cunicu-version.3
@@ -25,6 +25,10 @@ Show current status of the cunīcu daemon, its interfaces and peers
 \fB-h\fP, \fB--help\fP[=false]
 	help for version
 
+.PP
+\fB-s\fP, \fB--short\fP[=false]
+	Only show version and nothing else
+
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
